--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -32,7 +32,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "https://fonts.googleapis.com/css?family=Roboto:300,400,500"
             ],
             "scripts": []
           },
