--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -32,8 +32,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss",
-              "https://fonts.googleapis.com/css?family=Roboto:300,400,500"
+              "src/styles.scss"
             ],
             "scripts": []
           },
